# FastAPIStudy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: app.py
app/application/: product_service.py
app/config/: db_config.py
app/entity/: __init__.py  base.py  product.py  user.py
app/infrastructure/persistence/: product.py
app/presentation/: __init__.py  product_router.py
app/presentation/common/: api_tags.py  common_response.py  exception_handler.py
app/presentation/dto/: add_product.py  get_product.py
app/presentation/product/: product_router.py
app/presentation/product/dto/: add_product.py  get_product.py
app/presentation/user/: user_router.py
app/presentation/user/dto/: sign_in.py  sign_up.py
